# image_processing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.include/: color.hpp  image.hpp  vector.hpp
.src/: binary_image.cpp  binary_image.inl  color.cpp  color.inl  color_image.inl  color_transform.inl  edge_detection.inl  fourier_transform.inl  frequency_domain.inl  frequency_domain_filter.inl  grayscale_image.cpp  grayscale_image.inl  histogram.inl  image.cpp  image.inl  image_handler.inl  image_region.inl  image_segment.inl  input_handler.cpp  input_handler.inl  intensity_transform.inl  morphological_transform.inl  multi_plane_image.inl  noise_generator.inl  pseudocolor_mapping.inl  render_window.cpp  render_window.inl  segmentation.inl  spatial_filter.cpp  spatial_filter.inl  sprite.cpp  sprite.inl  vector.inl
.test/: main.cpp
docs/: noise.cpp  noise.md  opal_color.xcf
docs/color/: color.md  pseudocolor.md
docs/frequency_domain/: filtering_fourier_transform.md
docs/images/: images.md
docs/noise/: noise.cpp
docs/segmentation/: segmentation.md
include/: binary_image.hpp  color.hpp  color_image.hpp  color_transform.hpp  cpu_side_image_handler.hpp  edge_detection.hpp  fourier_transform.hpp  frequency_domain.hpp  frequency_domain_filter.hpp  grayscale_image.hpp  histogram.hpp  image.hpp  image_handler.hpp  image_region.hpp  image_segment.hpp  input_handler.hpp  intensity_transform.hpp  kernel.hpp  key_id.hpp  morphological_transform.hpp  multi_plane_image.hpp  noise_model.hpp  pseudocolor_mapping.hpp  render_window.hpp  segmentation.hpp  spatial_filter.hpp  sprite.hpp  vector.hpp  ~neighbourhood.hpp
include/detail/: common.hpp  salt_and_pepper_distribution.hpp
